--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: python
 python:
   - "2.7"
+env:
+    - TOX_ENV=docs
+    - TOX_ENV=flake8
+    - TOX_ENV=py27
 install:
-  - "pip install ."
+    - pip install tox
 script:
-  - nosetests
+    - tox -e $TOX_ENV
+notifications:
+    flowdock: 1f4ec6febcf1ac9b35ae6c1f0049471f
