make test with blueprint work

--- a/diamond_agent/tests/resources/blueprint.yaml
+++ b/diamond_agent/tests/resources/blueprint.yaml
@@ -22,4 +22,7 @@ node_templates:
                     mapping: diamond.diamond_agent.tasks.install
                     properties:
                         diamond_config: { get_input: diamond_config }
-                - stop: diamond.diamond_agent.tasks.uninstall
+                - stop:
+                    mapping: diamond.diamond_agent.tasks.uninstall
+                    properties:
+                        diamond_config: { get_input: diamond_config }
