--- a/plugin.yaml.template
+++ b/plugin.yaml.template
@@ -4,6 +4,5 @@
 
 plugins:
     diamond:
-        derived_from: cloudify.plugins.agent_plugin
-        properties:
-            url: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/{{ plugin_branch }}.zip
+        executor: host_agent
+        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/{{ plugin_branch }}.zip
