--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@
 envlist=flake8,docs,py27,py26
 
 [testenv]
-deps =
-    -rdev-requirements.txt
+deps = -rdev-requirements.txt
 
 [testenv:py26]
 deps =
