remove py26 from tox for now untill deps will support 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,9 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist=flake8,docs,py27,py26
+envlist=flake8,docs,py27
 
 [testenv]
 deps = -rdev-requirements.txt
-
-[testenv:py26]
-deps =
-    nose
-    nose-cov
-    testfixtures
-    {[testenv]deps}
-commands=nosetests --with-cov --cov diamond_agent/tests
 
 [testenv:py27]
 deps =
@@ -19,8 +11,8 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-commands=nosetests --with-cov --cov diamond_agent/tests
-
+;commands=nosetests --with-cov --cov diamond_agent/tests
+commands=which nosetests
 [testenv:docs]
 changedir=docs
 deps =
