--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,7 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-;commands=nosetests --with-cov --cov diamond_agent/tests
-commands=which nosetests
+commands=nosetests diamond_agent/tests
 [testenv:docs]
 changedir=docs
 deps =
