--- a/diamond_agent/tests/resources/blueprint/single_node.yaml
+++ b/diamond_agent/tests/resources/blueprint/single_node.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: cloudify_dsl_1_0
 
 imports:
-    - https://raw.githubusercontent.com/cloudify-cosmo/cloudify-manager/master/resources/rest-service/cloudify/types/types.yaml
+    - https://raw.githubusercontent.com/cloudify-cosmo/cloudify-manager/CFY-1025-update-monitoring-interfaces/resources/rest-service/cloudify/types/types.yaml
 
 plugins:
     diamond:
@@ -18,19 +18,20 @@ node_templates:
         properties:
             install_agent: false
         interfaces:
-            cloudify.interfaces.monitor_lifecycle:
+            cloudify.interfaces.monitoring_agent:
                 - install:
                     mapping: diamond.diamond_agent.tasks.install
                     properties:
                         diamond_config: { get_input: diamond_config }
                 - start: diamond.diamond_agent.tasks.start
-                - add:
+                - stop: diamond.diamond_agent.tasks.stop
+                - uninstall: diamond.diamond_agent.tasks.uninstall
+            cloudify.interfaces.monitoring:
+                - start:
                     mapping: diamond.diamond_agent.tasks.add_collectors
                     properties:
                         collectors_config: { get_input: collectors_config }
-                - remove:
+                - stop:
                     mapping: diamond.diamond_agent.tasks.del_collectors
                     properties:
                         collectors_config: { get_input: collectors_config }
-                - stop: diamond.diamond_agent.tasks.stop
-                - uninstall: diamond.diamond_agent.tasks.uninstall
