--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist=flake8,docs,py27
+envlist=flake8,docs,py27,py26
 
 [testenv]
 deps = -rdev-requirements.txt
@@ -8,11 +8,19 @@ deps = -rdev-requirements.txt
 [testenv:py27]
 deps =
     nose
-    mock
     nose-cov
     testfixtures
     {[testenv]deps}
 commands=nosetests diamond_agent/tests
+
+[testenv:py26]
+deps =
+    nose
+    nose-cov
+    testfixtures
+    {[testenv]deps}
+commands=nosetests diamond_agent/tests
+
 [testenv:docs]
 changedir=docs
 deps =
