--- a/diamond_agent/tests/resources/blueprint/single_node.yaml
+++ b/diamond_agent/tests/resources/blueprint/single_node.yaml
@@ -19,19 +19,19 @@ node_templates:
             install_agent: false
         interfaces:
             cloudify.interfaces.monitoring_agent:
-                - install:
-                    mapping: diamond.diamond_agent.tasks.install
-                    properties:
+                install:
+                    implementation: diamond.diamond_agent.tasks.install
+                    inputs:
                         diamond_config: { get_input: diamond_config }
-                - start: diamond.diamond_agent.tasks.start
-                - stop: diamond.diamond_agent.tasks.stop
-                - uninstall: diamond.diamond_agent.tasks.uninstall
+                start: diamond.diamond_agent.tasks.start
+                stop: diamond.diamond_agent.tasks.stop
+                uninstall: diamond.diamond_agent.tasks.uninstall
             cloudify.interfaces.monitoring:
-                - start:
-                    mapping: diamond.diamond_agent.tasks.add_collectors
-                    properties:
+                start:
+                    implementation: diamond.diamond_agent.tasks.add_collectors
+                    inputs:
                         collectors_config: { get_input: collectors_config }
-                - stop:
-                    mapping: diamond.diamond_agent.tasks.del_collectors
-                    properties:
+                stop:
+                    implementation: diamond.diamond_agent.tasks.del_collectors
+                    inputs:
                         collectors_config: { get_input: collectors_config }
