CFY-1372 cloudify types tosca naming convention

--- a/diamond_agent/tests/resources/blueprint/multi_node.yaml
+++ b/diamond_agent/tests/resources/blueprint/multi_node.yaml
@@ -14,7 +14,7 @@ inputs:
 
 node_templates:
     node:
-        type: cloudify.types.host
+        type: cloudify.nodes.Compute
         properties:
             install_agent: false
         interfaces:
@@ -28,7 +28,7 @@ node_templates:
                 uninstall: diamond.diamond_agent.tasks.uninstall
 
     subnode:
-        type: cloudify.types.base
+        type: cloudify.nodes.Root
         interfaces:
             cloudify.interfaces.monitoring:
                 start:
