--- a/diamond_agent/tests/resources/blueprint/single_node.yaml
+++ b/diamond_agent/tests/resources/blueprint/single_node.yaml
@@ -14,7 +14,7 @@ inputs:
 
 node_templates:
     node:
-        type: cloudify.types.host
+        type: cloudify.nodes.Compute
         properties:
             install_agent: false
         interfaces:
