--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
 language: python
 python:
-  - "2.7"
+- '2.7'
 env:
-    - TOX_ENV=docs
-    - TOX_ENV=flake8
-    - TOX_ENV=py27
-    - TOX_ENV=py26
+- TOX_ENV=docs
+- TOX_ENV=flake8
+- TOX_ENV=py27
+- TOX_ENV=py26
 install:
-    - pip install tox
+- pip install tox
 script:
-    - tox -e $TOX_ENV
+- tox -e $TOX_ENV
 deploy:
   provider: pypi
   server: https://pypi.python.org/pypi
   on:
     branch: pypi-release
-    condition: $TOX_ENV = py27
+    condition: "$TOX_ENV = py27"
+  user:
+    secure: b/oCmpkzZCm3R02XfLpa8Dh/5npSi62owhXPYE3ihKbsaDQe6LhXrtJ2nVMJNHYbVk84ZYRnH8fmHPDQ1j8mb84vjkEydQm8pnALxtnqEGzNfWXmH6rLxGbWvy+EJU5i8QB1ntjzl6tvQEwvXHb3AsmYe6ikCQy9UVHs1xXpKF8=
+  password:
+    secure: P9mRLYp62eAo9MVgbhM/HuKOrtjiyHq+MaRlNYSDfIk4tieGR+DFFTBIqTvD2JO/Z6GEkBSFNnB5X7Q45rBYnmSFRVdwOmObB403vl7r3sloxVWg5LrVQwEtiqRBa8nCX65vrqvtchdiGj5QJRNvwXeg8YfUuZp+85yMiKe6Ifo=
 after_deploy:
 - git clone https://github.com/cloudify-cosmo/travis-utils.git
 - python travis-utils/validate_pypi.py -v || exit 1
 notifications:
-    flowdock: 1f4ec6febcf1ac9b35ae6c1f0049471f
+  flowdock: 1f4ec6febcf1ac9b35ae6c1f0049471f
