change pypi deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,22 @@ install:
 script:
 - tox -e $TOX_ENV
 deploy:
-  - provider: pypi
+- provider: pypi
   server: https://pypi.python.org/pypi
   on:
-  branch: pypi-release
+    branch: pypi-release
   condition: $TOX_ENV = py27
   user: cloudify-maint
   password:
-    secure: "Uwq7TWdQt3fWR6F1bic7G50ZWy99kMlI821SeGks4FePBXUP3MwQKlIHqpDq2LNZ/hnhmzGXMBRoKQqzUbL/4iNsJD3YW9rSaj3GhI7XOTAb7V2Q47ozXhMMVFmXhBwKKyowqkJflNQvyqSQXqM4Vpy8KdFqyaRYAU3rBe9j/5w="
-  - provider: pypi
+    secure: Uwq7TWdQt3fWR6F1bic7G50ZWy99kMlI821SeGks4FePBXUP3MwQKlIHqpDq2LNZ/hnhmzGXMBRoKQqzUbL/4iNsJD3YW9rSaj3GhI7XOTAb7V2Q47ozXhMMVFmXhBwKKyowqkJflNQvyqSQXqM4Vpy8KdFqyaRYAU3rBe9j/5w=
+- provider: pypi
   server: https://pypitest.python.org/pypi
   on:
-  branch: pypi-test
+    branch: pypi-test
   condition: $TOX_ENV = py27
   user: cloudify-maint
   password:
-    secure: "hvl8oH+Ngwf+MEGMDy6EKWQ3F5uQjoUPxk4PHGYWakhl3ULFLNIYjhr/thrXrchbYqy8bikmdvflbXf1BW5E4olr4F3BqDFid98retiPuVka3W2hDbHdh9fugXBkJhWBujbhX8Z8EY4kfh2JIehaTLoc9pKX8V6o8u+iiQmeoB0="
+    secure: hvl8oH+Ngwf+MEGMDy6EKWQ3F5uQjoUPxk4PHGYWakhl3ULFLNIYjhr/thrXrchbYqy8bikmdvflbXf1BW5E4olr4F3BqDFid98retiPuVka3W2hDbHdh9fugXBkJhWBujbhX8Z8EY4kfh2JIehaTLoc9pKX8V6o8u+iiQmeoB0=
 after_deploy:
 - git clone https://github.com/cloudify-cosmo/travis-utils.git
 - python travis-utils/validate_pypi.py -v || exit 1
