--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,4 +5,4 @@
 plugins:
     diamond:
         executor: host_agent
-        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.2rc.zip
+        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.2rc1.zip
