CFY-3224-Broker-security-tests

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@
 envlist=flake8,docs,py27,py26
 
 [testenv]
-deps = -rdev-requirements.txt
+deps =
+    -rdev-requirements.txt
 
 [testenv:py27]
 deps =
@@ -11,7 +12,9 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-commands=nosetests diamond_agent/tests
+commands=
+    nosetests diamond_agent/tests
+    nosetests cloudify_handler/tests
 
 [testenv:py26]
 deps =
@@ -19,7 +22,9 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-commands=nosetests diamond_agent/tests
+commands=
+    nosetests diamond_agent/tests
+    nosetests cloudify_handler/tests
 
 [testenv:docs]
 changedir=docs
