--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,14 @@
-dependencies:
+checkout:
   post:
+    - >
+      if [ -n "$CI_PULL_REQUEST" ]; then
+        PR_ID=${CI_PULL_REQUEST##*/}
+        git fetch origin +refs/pull/$PR_ID/merge:
+        git checkout -qf FETCH_HEAD
+      fi
+
+dependencies:
+  pre:
     - pyenv local 2.7.9 2.6.8
   override:
     - pip install tox
