--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,6 +5,6 @@
 plugins:
     diamond:
         executor: host_agent
-        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.3.4.zip
+        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/master.zip
         package_name: cloudify-diamond-plugin
-        package_version: '1.3.4'
+        package_version: '1.3.5.dev'
