--- a/plugin.yaml
+++ b/plugin.yaml
@@ -7,4 +7,4 @@ plugins:
         executor: host_agent
         source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/master.zip
         package_name: cloudify-diamond-plugin
-        package_version: '1.3.5.dev'
+        package_version: '1.3.5.dev0'
