--- a/tox.ini
+++ b/tox.ini
@@ -24,10 +24,9 @@ commands=nosetests diamond_agent/tests
 [testenv:docs]
 changedir=docs
 deps =
-    sphinx
-    sphinx-rtd-theme
-    {[testenv]deps}
-commands=make html
+    git+https://github.com/cloudify-cosmo/sphinxify.git@initial-work
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:flake8]
 deps =
