--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands=nosetests diamond_agent/tests
 [testenv:docs]
 changedir=docs
 deps =
-    git+https://github.com/cloudify-cosmo/sphinxify.git@initial-work
+    git+https://github.com/cloudify-cosmo/sphinxify.git
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
