CFY-6877 support getting broker vhost from get_broker_credentials

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-commands=nosetests diamond_agent/tests
+commands=nosetests -s diamond_agent/tests
 
 [testenv:py26]
 deps =
@@ -19,7 +19,7 @@ deps =
     nose-cov
     testfixtures
     {[testenv]deps}
-commands=nosetests diamond_agent/tests
+commands=nosetests -s diamond_agent/tests
 
 [testenv:docs]
 changedir=docs
