--- a/plugin.yaml
+++ b/plugin.yaml
@@ -8,3 +8,4 @@ plugins:
         source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.3.5.zip
         package_name: cloudify-diamond-plugin
         package_version: '1.3.5'
+	install: false
