--- a/plugin.yaml
+++ b/plugin.yaml
@@ -5,6 +5,7 @@
 plugins:
     diamond:
         executor: host_agent
-        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.3.5.zip
+        source: https://github.com/cloudify-cosmo/cloudify-diamond-plugin/archive/1.3.6.zip
         package_name: cloudify-diamond-plugin
-        package_version: '1.3.5'
+        package_version: '1.3.6'
+        install: false
