--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,23 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist=flake8,docs,py27,py26
+envlist=
+    flake8,
+    docs,
+    test_{py27,py26}
 
 [testenv]
-deps = -rdev-requirements.txt
-
-[testenv:py27]
 deps =
+    -rdev-requirements.txt
     nose
     nose-cov
     testfixtures
-    {[testenv]deps}
+
+[testenv:test_py27]
+deps = {[testenv]deps}
 commands=nosetests -s diamond_agent/tests
 
-[testenv:py26]
-deps =
-    nose
-    nose-cov
-    testfixtures
-    {[testenv]deps}
+[testenv:test_py26]
+deps = {[testenv]deps}
 commands=nosetests -s diamond_agent/tests
 
 [testenv:docs]
@@ -26,13 +25,10 @@ changedir=docs
 deps =
     sphinx
     sphinx-rtd-theme
-    {[testenv]deps}
 commands=make html
 
 [testenv:flake8]
 deps =
     flake8
-    {[testenv]deps}
 commands=
-    flake8 diamond_agent
-    flake8 cloudify_handler
+    flake8 diamond_agent cloudify_handler
