CY-430 : Running unit tests with pytest

--- a/tox.ini
+++ b/tox.ini
@@ -8,17 +8,18 @@ envlist=
 [testenv]
 deps =
     -rdev-requirements.txt
-    nose
-    nose-cov
+    -rtest-requirements.txt
+    pytest
+    pytest-cov
     testfixtures
 
 [testenv:test_py27]
 deps = {[testenv]deps}
-commands=nosetests -s diamond_agent/tests
+commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
 
 [testenv:test_py26]
 deps = {[testenv]deps}
-commands=nosetests -s diamond_agent/tests
+commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
 
 [testenv:docs]
 changedir=docs
