--- a/tox.ini
+++ b/tox.ini
@@ -2,31 +2,15 @@
 [tox]
 envlist=
     flake8,
-    docs,
-    test_{py27,py26}
+    py27
 
 [testenv]
 deps =
-    -rdev-requirements.txt
     -rtest-requirements.txt
-    pytest
-    pytest-cov
-    testfixtures
 
-[testenv:test_py27]
+[testenv:py27]
 deps = {[testenv]deps}
 commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
-
-[testenv:test_py26]
-deps = {[testenv]deps}
-commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
-
-[testenv:docs]
-changedir=docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-commands=make html
 
 [testenv:flake8]
 deps =
