before getting started

--- a/tox.ini
+++ b/tox.ini
@@ -1,35 +1,28 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist=
-    flake8,
-    docs,
-    test_{py27,py26}
+envlist = Python,flake8
+minversion = 1.6
+skipsdist = True
 
 [testenv]
-deps =
-    -rdev-requirements.txt
-    -rtest-requirements.txt
-    pytest
-    pytest-cov
-    testfixtures
+setenv =
+        VIRTUAL_ENV={envdir}
 
-[testenv:test_py27]
+# NOTE: relative paths were used due to '-w' flag for nosetests util
+
+usedevelop = True
+install_command = pip install -U {opts} {packages}
+deps = -r{toxinidir}/test-requirements.txt
+whitelist_externals = bash
+
+[testenv:Python]
 deps = {[testenv]deps}
 commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
-
-[testenv:test_py26]
-deps = {[testenv]deps}
-commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
-
-[testenv:docs]
-changedir=docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-commands=make html
 
 [testenv:flake8]
-deps =
-    flake8
-commands=
-    flake8 diamond_agent cloudify_handler
+deps = {[testenv]deps}
+commands=flake8 diamond_agent cloudify_handler
+show-source = True
+ignore =
+exclude=.venv,.tox,dist,*egg,etc,build,bin,lib,local,share
+filename=*.py
