--- a/diamond_agent/tests/resources/blueprint/restart_diamond_script.yaml
+++ b/diamond_agent/tests/resources/blueprint/restart_diamond_script.yaml
@@ -1,52 +1,58 @@
 tosca_definitions_version: cloudify_dsl_1_3
 
 imports:
-    - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
+  - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
 
 plugins:
-    diamond:
-        executor: central_deployment_agent
-        install: false
+  diamond:
+    executor: central_deployment_agent
+    install: false
 
 relationships:
-    myrel:
-        derived_from: cloudify.relationships.depends_on
-        source_interfaces:
-            cloudify.interfaces.relationship_lifecycle:
-                establish:
-                    executor: central_deployment_agent
-                    implementation: diamond.diamond_agent.tests.test_single_node.sleep_and_restart_diamond
+  myrel:
+    derived_from: cloudify.relationships.depends_on
+    source_interfaces:
+      cloudify.interfaces.relationship_lifecycle:
+        establish:
+          executor: central_deployment_agent
+          implementation: diamond.diamond_agent.tests.test_single_node.sleep_and_restart_diamond
 
 node_templates:
-    node1:
-        type: cloudify.nodes.Compute
-        properties:
-            install_agent: false
+  node1:
+    type: cloudify.nodes.Compute
+    properties:
+      ip: localhost
+      agent_config:
+        user: ubuntu
+        install_method: none
 
-    node2:
-        type: cloudify.nodes.Compute
-        properties:
-            install_agent: false        
-        relationships:
-            - type: myrel
-              target: node1
-        interfaces:
-            cloudify.interfaces.monitoring_agent:
-                install:
-                    implementation: diamond.diamond_agent.tasks.install
-                    inputs:
-                        diamond_config: {}
-                start: diamond.diamond_agent.tasks.start
-                stop: diamond.diamond_agent.tasks.stop
-                uninstall: diamond.diamond_agent.tasks.uninstall
-            cloudify.interfaces.monitoring:
-                start:
-                    implementation: diamond.diamond_agent.tasks.add_collectors
-                    executor: central_deployment_agent
-                    inputs:
-                        collectors_config: {}
-                stop:
-                    implementation: diamond.diamond_agent.tasks.del_collectors
-                    executor: central_deployment_agent
-                    inputs:
-                        collectors_config: {}
+  node2:
+    type: cloudify.nodes.Compute
+    properties:
+      ip: localhost
+      agent_config:
+        user: ubuntu
+        install_method: none
+    relationships:
+      - type: myrel
+        target: node1
+    interfaces:
+      cloudify.interfaces.monitoring_agent:
+        install:
+          implementation: diamond.diamond_agent.tasks.install
+          inputs:
+            diamond_config: {}
+        start: diamond.diamond_agent.tasks.start
+        stop: diamond.diamond_agent.tasks.stop
+        uninstall: diamond.diamond_agent.tasks.uninstall
+      cloudify.interfaces.monitoring:
+        start:
+          implementation: diamond.diamond_agent.tasks.add_collectors
+          executor: central_deployment_agent
+          inputs:
+            collectors_config: {}
+        stop:
+          implementation: diamond.diamond_agent.tasks.del_collectors
+          executor: central_deployment_agent
+          inputs:
+            collectors_config: {}
