--- a/diamond_agent/tests/resources/blueprint/single_node.yaml
+++ b/diamond_agent/tests/resources/blueprint/single_node.yaml
@@ -1,37 +1,42 @@
 tosca_definitions_version: cloudify_dsl_1_3
 
 imports:
-    - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
+  - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
 
 plugins:
-    diamond:
-        executor: central_deployment_agent
-        install: false
+  diamond:
+    executor: central_deployment_agent
+    install: false
 
 inputs:
-    diamond_config: {}
-    collectors_config: {}
+  diamond_config:
+    default: {}
+  collectors_config:
+    default: {}
 
 node_templates:
-    node:
-        type: cloudify.nodes.Compute
-        properties:
-            install_agent: false
-        interfaces:
-            cloudify.interfaces.monitoring_agent:
-                install:
-                    implementation: diamond.diamond_agent.tasks.install
-                    inputs:
-                        diamond_config: { get_input: diamond_config }
-                start: diamond.diamond_agent.tasks.start
-                stop: diamond.diamond_agent.tasks.stop
-                uninstall: diamond.diamond_agent.tasks.uninstall
-            cloudify.interfaces.monitoring:
-                start:
-                    implementation: diamond.diamond_agent.tasks.add_collectors
-                    inputs:
-                        collectors_config: { get_input: collectors_config }
-                stop:
-                    implementation: diamond.diamond_agent.tasks.del_collectors
-                    inputs:
-                        collectors_config: { get_input: collectors_config }
+  node:
+    type: cloudify.nodes.Compute
+    properties:
+      ip: localhost
+      agent_config:
+        user: ubuntu
+        install_method: none
+    interfaces:
+      cloudify.interfaces.monitoring_agent:
+        install:
+          implementation: diamond.diamond_agent.tasks.install
+          inputs:
+            diamond_config: { get_input: diamond_config }
+        start: diamond.diamond_agent.tasks.start
+        stop: diamond.diamond_agent.tasks.stop
+        uninstall: diamond.diamond_agent.tasks.uninstall
+      cloudify.interfaces.monitoring:
+        start:
+          implementation: diamond.diamond_agent.tasks.add_collectors
+          inputs:
+            collectors_config: { get_input: collectors_config }
+        stop:
+          implementation: diamond.diamond_agent.tasks.del_collectors
+          inputs:
+            collectors_config: { get_input: collectors_config }
