--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,7 +204,7 @@ commands:
           at: workspace
       - run:
           name: update pip
-          command: pip install -U pip
+          command: pip install -U pip===20.3.3
       - run:
           name: install cloudify
           command: |
@@ -239,7 +239,7 @@ commands:
           at: workspace
       - run:
           name: update pip
-          command: pip install -U pip
+          command: pip install -U pip===20.3.3
       - run:
           name: install cloudify
           command: |
@@ -259,6 +259,9 @@ commands:
       - run:
           name: start docker container
           command: docker run --name cfy_manager -d --restart unless-stopped -v /sys/fs/cgroup:/sys/fs/cgroup:ro --tmpfs /run --tmpfs /run/lock --security-opt seccomp:unconfined --cap-add SYS_ADMIN --network host cloudify-manager-aio:latest
+      - run:
+          name: wait for starter
+          command: docker exec -it cfy_manager cfy_manager wait-for-starter
       - run:
           name: install local project
           command: pip install https://github.com/cloudify-incubator/cloudify-ecosystem-test/archive/latest.zip
@@ -352,13 +355,13 @@ jobs:
       - check_py3_compat
 
   validate_version:
-    executor: py27
+    executor: py36
     steps:
       - checkout
       - validate_version
 
   validate_documentation:
-    executor: py27
+    executor: py36
     steps:
       - checkout
       - validate_documentation
@@ -376,7 +379,7 @@ jobs:
       - generate_rhel_py27py36_wagon
 
   build_bundle:
-    executor: wagon_generator
+    executor: py36
     steps:
       - checkout
       - build_archive
@@ -399,13 +402,13 @@ jobs:
       - checkout
       - run_integration_tests_510
   release:
-    executor: py27
+    executor: py36
     steps:
       - checkout
       - release_plugin
 
   merge_docs:
-    executor: py27
+    executor: py36
     steps:
       - checkout
       - merge_docs
