change command - validate-ֿplugin-version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ commands:
           command: sudo python get-pip.py
       - run:
           name: Install virtualenv
-          command: pip install --user virtualenv
+          command: pip install --user virtualenvxs
       - run:
           name: Init virtualenv
           command: virtualenv env
@@ -136,7 +136,7 @@ commands:
           command: pip install https://github.com/cloudify-incubator/cloudify-ecosystem-test/archive/latest.zip
       - attach_workspace:
           at: workspace
-      - run: ecosystem-test validate_plugin_version
+      - run: ecosystem-test validate-plugin-version
 
   generate_py27py36_wagon:
     steps:
