--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ commands:
           command: sudo python get-pip.py
       - run:
           name: Install virtualenv
-          command: pip install --user virtualenvxs
+          command: pip install --user virtualenv
       - run:
           name: Init virtualenv
           command: virtualenv env
