--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = Python,flake8
+envlist = unittesting,linting
 minversion = 1.6
 skipsdist = True
 
@@ -15,11 +15,11 @@ install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 whitelist_externals = bash
 
-[testenv:Python]
+[testenv:unittesting]
 deps = {[testenv]deps}
 commands=pytest -s --cov-report term-missing --cov=diamond_agent diamond_agent/tests
 
-[testenv:flake8]
+[testenv:linting]
 deps = {[testenv]deps}
 commands=flake8 diamond_agent cloudify_handler
 show-source = True
